--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,6 @@
 os: osx
 osx_image: xcode10.1
 language: swift
-# sudo: required
-# install:
-# - wget https://swift.org/builds/swift-4.2-branch/xcode/swift-4.2-DEVELOPMENT-SNAPSHOT-2018-05-30-a/swift-4.2-DEVELOPMENT-SNAPSHOT-2018-05-30-a-osx.pkg
-# - sudo installer -pkg swift-4.2-DEVELOPMENT-SNAPSHOT-2018-05-30-a-osx.pkg -target /
-# - export PATH="/Library/Developer/Toolchains/swift-4.2-DEVELOPMENT-SNAPSHOT-2018-05-30-a.xctoolchain/usr/bin:$PATH"
-script:
-- swift --version
-- swift package update
-- swift test
+xcode_project: MovieAround.xcodeproj
+xcode_scheme: MovieAround
+xcode_destination: platform=iOS Simulator,OS=10.1,name=iPad Pro (9.7-inch)
