--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,7 @@ language: swift
 xcode_project: MovieAround.xcodeproj
 xcode_scheme: MovieAround
 xcode_destination: platform=iOS Simulator,OS=10.1,name=iPad Pro (9.7-inch)
+
+install:
+- brew update
+- brew install mint
